# We only need to set up distribution here

noinst_HEADERS =   char.h     errors.h   heap.h     signals.h  unichar.h\
        clock.h    eval.h     list.h     sort.h     unix.h\
        code.h     fileio.h   msg.h      stats.h    utf.h\
        cons.h     floats.h   str.h      vars.h\
        dbgflags.h strfile.h  version.h  perms.h\
        debug.h    go.h       process.h  symbols.h  word.h\
        dict.h     setops.h   term.h     lock.h\
	esc.h      hashtable.h global.h

